--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -603,20 +603,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-height: -webkit-fill-available;
 }
 
+body {
+  background: url('/img/so-white.png') repeat;
+}
+
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
-  .sm\:mt-16 {
-    margin-top: 4rem;
-  }
-
-  .sm\:mt-12 {
-    margin-top: 3rem;
-  }
-
   .sm\:mt-20 {
     margin-top: 5rem;
   }
@@ -628,14 +624,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-  .md\:mt-12 {
-    margin-top: 3rem;
-  }
-
-  .md\:mt-16 {
-    margin-top: 4rem;
-  }
-
   .md\:mt-24 {
     margin-top: 6rem;
   }
