--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -945,6 +945,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-prose-invert-td-borders: #334155;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.-top-8 {
+  top: -2rem;
+}
+
+.-top-4 {
+  top: -1rem;
+}
+
+.-top-6 {
+  top: -1.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -977,6 +997,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -1067,6 +1091,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1088,6 +1117,14 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:-top-8 {
+    top: -2rem;
+  }
+
+  .sm\:-top-10 {
+    top: -2.5rem;
+  }
+
   .sm\:mr-6 {
     margin-right: 1.5rem;
   }
