--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1120,8 +1120,7 @@ body {
 }
 
 .dark body {
-  background: #222222;
-  background-image: none;
+  background: url('/img/ep_naturalblack.png') repeat;
 }
 
 .hover\:text-gray-800:hover {
